@@ -1,1 +1,4 @@
 Base on https://github.com/gunnarmorling/hibernate-orm-on-java9-modules
+
+java --class-path=./target/lib/byte-buddy-1.10.0.jar --module-path=./target/modules:./target/cra-connector-1.0-SNAPSHOT.jar --add-modules=java.xml.bind --module=com.example/com.example.Main
+
